<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.auth.ForgotPasswordConfirmFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_forgot_02"
                android:layout_gravity="center"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_confirm_title"
                style="@style/TextAppearance.GetMontir.Headline5"
                android:textColor="@color/secondaryColor"
                android:layout_marginTop="30dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_confirm_description"
                style="@style/TextAppearance.GetMontir.Body1"
                android:textColor="@color/black_blue_900"
                android:layout_marginTop="12dp"/>

            <com.getmontir.lib.presentation.component.pin.PinView
                android:id="@+id/textOtp"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="****"
                android:inputType="number"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cursorWidth="2dp"
                app:lineColor="@color/line_input_pin"
                android:textColorHint="#338f92a1"
                app:highlightLineWhenFilled="true"
                app:itemHeight="48dp"
                app:itemWidth="48dp"
                app:itemSpacing="15dp"
                app:lineWidth="2dp"
                app:viewType="line"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_resend_otp"
                android:layout_gravity="center"
                style="@style/TextAppearance.GetMontir.Caption"
                android:textColor="#385084"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/button_forgot_confirm"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>