<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/divider_social"
                style="@style/TextAppearance.GetMontir.Body1"
                android:textColor="#9098b1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@id/tvText"
                android:background="#9098b1"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/tvText"
                android:background="#9098b1" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSocialGoogle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.GetMontirMitra.Button.OutlinedButton.Icon"
                app:icon="@drawable/ic_social_google"
                android:text="@string/button_social_register_google" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                 <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSocialFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    style="@style/Widget.GetMontirMitra.Button.OutlinedButton.Icon"
                    app:icon="@drawable/ic_social_facebook"
                    android:text="@string/button_social_register_facebook" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</layout>